WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129894
[WebRTC] Throw SYNTAX_ERROR when maxRetransmits and maxRetransmitTime are both set in RTCDataChannelInit
https://bugs.webkit.org/show_bug.cgi?id=129894
Summary
[WebRTC] Throw SYNTAX_ERROR when maxRetransmits and maxRetransmitTime are bot...
Thiago de Barros Lacerda
Reported
2014-03-07 11:17:21 PST
Throw SYNTAX_ERROR when maxRetransmits and maxRetransmitTime are both set in RTCDataChannelInit
Attachments
Patch
(4.87 KB, patch)
2014-03-07 11:23 PST
,
Thiago de Barros Lacerda
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thiago de Barros Lacerda
Comment 1
2014-03-07 11:23:41 PST
Created
attachment 226141
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-07 19:30:37 PST
Comment on
attachment 226141
[details]
Patch Clearing flags on attachment: 226141 Committed
r165321
: <
http://trac.webkit.org/changeset/165321
>
WebKit Commit Bot
Comment 3
2014-03-07 19:30:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug