[WebRTC] Throw SYNTAX_ERROR when maxRetransmits and maxRetransmitTime are both set in RTCDataChannelInit https://bugs.webkit.org/show_bug.cgi?id=129894

Reviewed by Eric Carlson.

Source/WebCore:

Existing test was updated.

* Modules/mediastream/RTCDataChannel.cpp:
(WebCore::RTCDataChannel::create):

LayoutTests:

* fast/mediastream/RTCPeerConnection-datachannel-expected.txt:
* fast/mediastream/RTCPeerConnection-datachannel.html:


Canonical link: https://commits.webkit.org/147947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165321 268f45cc-cd09-0410-ab3c-d52691b4dbfc